fix: remove overflow property from global styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@
     border: 0;
     box-sizing: border-box;
     font-family: "Ubuntu Sans", sans-serif;
-    overflow: hidden;
 }
 
 body{
